@@ -33,9 +33,9 @@
 <span class="heading1">Installation</span><br>
 
 <p>I've sucessfully installed DB2 Enterprise Edition versions 7.2 and 8.1 on
-Linux, DB2 Personal Edition version 8.2 on Linux and DB2 Express Editions 8.2.4
-and 9.1 on Linux.  I've never had access to any other version of DB2 for Linux
-or any version of DB2 for other platforms.</p>
+Linux, DB2 Personal Edition version 8.2 on Linux and DB2 Express Editions 8.2.4,
+9.1 and 9.7.1 on Linux.  I've never had access to any other version of DB2 for
+Linux or any version of DB2 for other platforms.</p>
 
 <a name="rpm"></a>
 <span class="heading2">Install RPM</span><br>
@@ -78,9 +78,10 @@ Follow the links below for the version of DB2 that you are installing.</p>
 
 <p><a href="db2/72.html">Installing IBM DB2 Enterprise V7.2</a><br>
 <a href="db2/81.html">Installing IBM DB2 Enterprise V8.1</a><br>
-<a href="db2/82.html">Installing IBM DB2 Personal V8.2</a></p>
-<a href="db2/824.html">Installing IBM DB2 Express V8.2.4</a></p>
-<a href="db2/91.html">Installing IBM DB2 Express V9.1</a></p>
+<a href="db2/82.html">Installing IBM DB2 Personal V8.2</a><br>
+<a href="db2/824.html">Installing IBM DB2 Express V8.2.4</a><br>
+<a href="db2/91.html">Installing IBM DB2 Express V9.1</a><br>
+<a href="db2/971.html">Installing IBM DB2 Express V9.7.1</a></p>
 
 <a name="creating"></a>
 <span class="heading2">Creating a Database</span><br>
