@@ -53,10 +53,10 @@ chmod 775 /opt/firebird<br>
 chown firebird:firebird /opt/firebird
 </b></blockquote>
 
-<p>Firebird versions 1.5 and higher, below Firebird 2.0 require libstdc++.so.5
+<p>Many versions of Firebird require libstdc++.so.5
 but most Linux distributions ship with a more recent version.  If your system
 doesn't have /usr/lib/libstdc++.so.5
-then you may need to install a compatibility library.  On Fedora Core 4, you
+then you may need to install a compatibility library.  On Fedora, you
 need to install compat-libstdc++-33 as follows (as root):</p>
 
 <blockquote><b>
