@@ -8,6 +8,7 @@
 	applied Stephan van Egmond's sqlrsh history patch
 	added configure test for gmake, use it to find ruby.h
 	applied mingang@taobao.com's scaler patch for -debug
+	added getting started notes for Oracle 11.2 on Fedora Core 12
 
 0.41 - added configure test for ruby.h
 	added a couple of new functions to the mysql drop-in library
